feat: Add competions blog

--- a/docs/blog/posts/competitions/2024_BJOS.md
+++ b/docs/blog/posts/competitions/2024_BJOS.md
@@ -2,6 +2,7 @@
 title: RapidOCR获得2024中国互联网发展创新与投资大赛（开源）二等奖
 date: 2024-09-03
 authors: [SWHL]
+slug: 2024-bjos
 categories:
   - Competition
 comments: true
