docs: Update docs

--- a/docs/blog/posts/competitions/2024_BJOS.md
+++ b/docs/blog/posts/competitions/2024_BJOS.md
@@ -15,6 +15,8 @@ comments: true
 
 🎉很荣幸参加2024中国互联网发展创新与投资大赛，获得了二等奖。
 
+比赛官网通告链接：[2024中国互联网发展创新与投资大赛（开源）决赛获奖名单正式发布](https://bs.bjos.club/hjgg-n183.html#cons)
+
 关于RapidOCR的未来规划，我们会一直秉承只做最接地气，最好用的OCR，只集成最优秀的OCR模型，在精度与速度两方面做到平衡。
 
 欢迎持续关注，也欢迎加入我们，一起学习交流。
