chore: update files

--- a/docs/changelog/v3.4.1.md
+++ b/docs/changelog/v3.4.1.md
@@ -4,15 +4,13 @@ hide:
   - toc
 ---
 
-### 更新日志
-
 #### (issue #530)支持PaddleOCR在v3.2.0中发布的PP-OCRv5 英文/泰文/希腊文三个文本识别模型
 
 这三个语种默认对应`LangRec.EN`、`LangRec.TH`和`LangRec.EL`。具体可参见官方文档中[模型列表](https://rapidai.github.io/RapidOCRDocs/main/model_list/#_4)一节。
 
 下面给出希腊文识别示例：
 
-```python
+```python linenums="1"
 from rapidocr import LangRec, ModelType, OCRVersion, RapidOCR
 
 engine = RapidOCR(
@@ -31,7 +29,7 @@ result.vis("vis_result.jpg")
 
 #### (issue #531) 添加日志打印开关
 
-```python
+```python linenums="1"
 from rapidocr import RapidOCR
 
 engine = RapidOCR(params={"Global.log_level": "critical"})  # 注意这里改为critical，就不会打印日志了
