docs: add v3.4.2 changelog

--- a/docs/changelog/v3.4.1.md
+++ b/docs/changelog/v3.4.1.md
@@ -4,7 +4,9 @@ hide:
   - toc
 ---
 
-#### (issue #530)支持PaddleOCR在v3.2.0中发布的PP-OCRv5 英文/泰文/希腊文三个文本识别模型
+## 新增功能
+
+### 支持PaddleOCR在v3.2.0中发布的PP-OCRv5 英文/泰文/希腊文三个文本识别模型(issue #530)
 
 这三个语种默认对应`LangRec.EN`、`LangRec.TH`和`LangRec.EL`。具体可参见官方文档中[模型列表](https://rapidai.github.io/RapidOCRDocs/main/model_list/#_4)一节。
 
@@ -27,7 +29,17 @@ print(result)
 result.vis("vis_result.jpg")
 ```
 
-#### (issue #531) 添加日志打印开关
+## 改进优化
+
+### 统一det、cls和rec各个阶段统计运行时间的范围(issue #544)
+
+都统一改为从前处理、模型推理和后处理都算上。
+
+### 重构单元测试部分
+
+主要是拆分原有的`test_main.py`文件，利于后续维护
+
+### 添加日志打印开关(issue #531)
 
 ```python linenums="1"
 from rapidocr import RapidOCR
@@ -42,14 +54,8 @@ result.vis("vis_result.jpg")
 print(result.to_markdown())
 ```
 
-#### (issue #528) 修复保存中文路径乱码问题
+## Bug修复
 
-#### (issue #527) 修复PyTorch>=2.6时，加载模型权重问题
+### 修复保存中文路径乱码问题(issue #528)
 
-#### (issue #544) 统一det、cls和rec各个阶段统计运行时间的范围
-
-都统一改为从前处理、模型推理和后处理都算上。
-
-#### 重构单元测试部分
-
-主要是拆分原有的`test_main.py`文件，利于后续维护
+### 修复PyTorch>=2.6时，加载模型权重问题(issue #527)
