--- a/docs/changelog/v3.4.3.md
+++ b/docs/changelog/v3.4.3.md
@@ -6,11 +6,11 @@ hide:
 
 ### 新增功能
 
-#### 默认参数现在会遵循配置文件中的设置 (#591)
+#### 默认参数现在会遵循配置文件中的设置 (PR #591)
 
 #### 使用自动对比度背景融合方式，替换了有缺陷的 RGBA 转 BGR逻辑 (commit c65d816)
 
-#### 优化了文本框排序逻辑 (#587)
+#### 优化了文本框排序逻辑 (PR #587)
 
 ### Bug修复
 
