chore: update files

--- a/docs/blog/posts/honor/20260115_G_Star.md
+++ b/docs/blog/posts/honor/20260115_G_Star.md
@@ -1,10 +1,10 @@
 ---
-title: RapidOCR获得AtomGit官方G-Star项目毕业认证
+title: 2025：RapidOCR获得AtomGit官方G-Star项目毕业认证
 date: 2026-01-15
 authors: [SWHL]
 slug: 2025-atomgit-g-star
 categories:
-  - Competition
+  - Honor
 comments: true
 ---
 
