--- a/docs/blog/posts/honor/2024_BJOS.md
+++ b/docs/blog/posts/honor/2024_BJOS.md
@@ -1,17 +1,18 @@
 ---
-title: RapidOCR获得2024中国互联网发展创新与投资大赛（开源）二等奖
+title: 2024：RapidOCR获得2024中国互联网发展创新与投资大赛（开源）二等奖
 date: 2024-09-03
 authors: [SWHL]
 slug: 2024-bjos
 categories:
-  - Competition
+  - Honor
 comments: true
 ---
 
+宣布获得2024中国互联网发展创新与投资大赛二等奖
 
 <!-- more -->
 
-### 引言
+### 写在前面
 
 🎉很荣幸参加2024中国互联网发展创新与投资大赛，获得了二等奖。
 
