feat: add img radius

--- a/docs/blog/posts/honor/20260115_G_Star.md
+++ b/docs/blog/posts/honor/20260115_G_Star.md
@@ -14,6 +14,8 @@ comments: true
 
 🎉今年很荣幸加入了AtomGit的GitCode开源摘星计划（G-Star计划），并得到了官方认证。
 
-![alt text](../images/RapidOCR_G-star.jpg)
+AtomGit项目地址：<https://atomgit.com/RapidAI/RapidOCR>
+
+![G-Star](../images/RapidOCR_G-star.jpg){.img1}
 
 欢迎持续关注，也欢迎加入我们，一起学习交流。
