--- a/docs/blog/posts/honor/2024_BJOS.md
+++ b/docs/blog/posts/honor/2024_BJOS.md
@@ -23,7 +23,9 @@ comments: true
 欢迎持续关注，也欢迎加入我们，一起学习交流。
 
 ### 答辩PPT
-
+<!--
 <div align="left">
     <img src="https://github.com/RapidAI/RapidOCRDocs/releases/download/assets/2024-BJOS.jpg" width="100%" height="100%">
-</div>
+</div> -->
+
+![BJOS](https://github.com/RapidAI/RapidOCRDocs/releases/download/assets/2024-BJOS.jpg){.img1}
