docs: update files

--- a/docs/changelog/v3.6.0.md
+++ b/docs/changelog/v3.6.0.md
@@ -21,7 +21,7 @@ hide:
 
 #### 当 `model_dict` 为 None 时增加提示信息 由 [@SWHL](https://github.com/SWHL) 在 [58bf4f8](https://github.com/RapidAI/RapidOCR/commit/58bf4f81cc83117f0ea25b29a4fa0cd1c2215f0d) 中贡献
 
-#### 对 MNN 和 OpenVINO 推理引擎进行模块化 (#629) 由 [@locviettri](https://github.com/locviettri) 在 [4818b4f](https://github.com/RapidAI/RapidOCR/commit/4818b4f1e135aa5a84730ab3baec304c18ebdae7) 中贡献
+#### 对 MNN 和 OpenVINO 推理引擎进行模块化 (#629) 由 [@LocNgoXuan23](https://github.com/LocNgoXuan23) 在 [4818b4f](https://github.com/RapidAI/RapidOCR/commit/4818b4f1e135aa5a84730ab3baec304c18ebdae7) 中贡献
 
 ### 🧪 测试
 
